<package format="2">
  <name>turtlesim_vacuum</name>
  <version>1.2.4</version>
  <description>
      This package simulates a robot vacuum cleaner using the turtlesim package.
  </description>
  <maintainer email="my@mail.com">Diego Ramos</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
